--- a/index.html
+++ b/index.html
@@ -26,5 +26,93 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="container flex padded">
+
+            <div class="card">
+                <img src="img/1.webp" alt="">
+                <div>Levi's</div>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <div>
+                    <span class="price">14,99 €</span>
+                    <span class="old-price">29,99 €</span>
+                </div>
+                <div class="writes">
+                    <div class="box box-discount">-50%</div>
+                    <div class="box box-sost">Sostenibilità</div>
+                </div> 
+                <div class="heart">&hearts;</div>   
+            </div>
+
+            <div class="card">
+                <img src="img/2.webp" alt="">
+                <div>Guess</div>
+                <h3>ROSES TEE</h3>
+                <div>
+                    <span class="price">20,99 €</span>
+                    <span class="old-price">29,99 €</span>
+                </div>
+                <div class="writes">
+                    <div class="box box-discount">-30%</div>
+                </div>
+                <div class="heart">&hearts;</div>   
+            </div>
+
+            <div class="card">
+                <img src="img/3.webp" alt="">
+                <div>Come Zucchero Filato</div>
+                <h3>VOGLIA DI COLORI PASTELLO</h3>
+                <div>
+                    <span class="price">129,99 €</span>
+                    <span class="old-price">184,99 €</span>
+                </div>
+                <div class="writes">
+                    <div class="box box-discount">-30%</div>
+                </div>
+                <div class="heart">&hearts;</div> 
+            </div>
+
+            <div class="card">
+                <img src="img/4.webp" alt="">
+                <div>Levi's</div>
+                <h3>TEE UNISEX</h3>
+                <div>
+                    <span class="price">14,99 €</span>
+                    <span class="old-price">29,99 €</span>
+                </div>
+                <div class="writes">
+                    <div class="box box-discount">-50%</div>
+                    <div class="box box-sost">Sostenibilità</div>
+                </div>
+                <div class="heart">&hearts;</div> 
+            </div>
+
+            <div class="card">
+                <img src="img/5.webp" alt="">
+                <div>Maya Deluxe</div>
+                <h3>STRIPE BODICE</h3>
+                <div>
+                    <span class="price">99,99 €</span>
+                </div>
+                <div class="heart">&hearts;</div> 
+            </div>
+
+            <div class="card">
+                <img src="img/6.webp" alt="">
+                <div>Esprit</div>
+                <h3>MAGLIONE - BLACK</h3>
+                <div>
+                    <span class="price">29,99 €</span>
+                </div>
+                <div class="writes">
+                    <div class="box box-sost">Sostenibilità</div>
+                </div>
+                <div class="heart">&hearts;</div> 
+            </div>
+        </div>
+    </main>
+
+
 </body>
 </html>
