--- a/index.html
+++ b/index.html
@@ -113,6 +113,30 @@
         </div>
     </main>
 
+    <footer>
+        <div class="container flex">
+            <div>
+                <h3 class="first-row">Boolando s.r.l</h3>
+                <div>
+                    <a href="">Informazioni legali</a>
+                    <a href="">Informativa sulla privacy</a>
+                    <a href="">Diritto di recesso</a>
+                </div>
+            </div>
+
+            <div>
+                <h5 class="first-row">Trovaci anche su</h5>
+                <div>
+                    <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+                    <a href=""><i class="fa-brands fa-pinterest-square"></i></a>
+                    <a href=""><i class="fa-brands fa-youtube-square"></i></a>
+                </div>
+            </div>
+        </div>    
+    </footer>
+
 
 </body>
 </html>
