--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="container flex padded">
 
             <div class="card">
-                <img src="img/1.webp" alt="">
+                <img class="show" src="img/1.webp" alt="">
+                <img class="ghost" src="img/1b.webp" alt="">
                 <div>Levi's</div>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <div>
@@ -46,7 +47,8 @@
             </div>
 
             <div class="card">
-                <img src="img/2.webp" alt="">
+                <img class="show" src="img/2.webp" alt="">
+                <img class="ghost" src="img/2b.webp" alt="">
                 <div>Guess</div>
                 <h3>ROSES TEE</h3>
                 <div>
@@ -60,7 +62,8 @@
             </div>
 
             <div class="card">
-                <img src="img/3.webp" alt="">
+                <img class="show" src="img/3.webp" alt="">
+                <img class="ghost" src="img/3b.webp" alt="">
                 <div>Come Zucchero Filato</div>
                 <h3>VOGLIA DI COLORI PASTELLO</h3>
                 <div>
@@ -74,7 +77,8 @@
             </div>
 
             <div class="card">
-                <img src="img/4.webp" alt="">
+                <img class="show" src="img/4.webp" alt="">
+                <img class="ghost" src="img/4b.webp" alt="">
                 <div>Levi's</div>
                 <h3>TEE UNISEX</h3>
                 <div>
@@ -89,7 +93,8 @@
             </div>
 
             <div class="card">
-                <img src="img/5.webp" alt="">
+                <img class="show" src="img/5.webp" alt="">
+                <img class="ghost" src="img/5b.webp" alt="">
                 <div>Maya Deluxe</div>
                 <h3>STRIPE BODICE</h3>
                 <div>
@@ -99,7 +104,8 @@
             </div>
 
             <div class="card">
-                <img src="img/6.webp" alt="">
+                <img class="show" src="img/6.webp" alt="">
+                <img class="ghost" src="img/6b.webp" alt="">
                 <div>Esprit</div>
                 <h3>MAGLIONE - BLACK</h3>
                 <div>
