--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container flex">
             <div>
                 <h3 class="first-row">Boolando s.r.l</h3>
-                <div>
+                <div class="flex gap">
                     <a href="">Informazioni legali</a>
                     <a href="">Informativa sulla privacy</a>
                     <a href="">Diritto di recesso</a>
